test/fixtures/install-consumer/negative/forbidden_runtime.ml
(** This fixture must not compile from an installed [temporal-sdk] package. *)

module Private = Temporal_runtime

let () = ()
